--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "scripts": {
     "ng": "ng",
     "start": "ng serve",
-    "build": "ng build",
+    "build": "ng build dist",
     "watch": "ng build --watch --configuration development",
     "test": "ng test",
     "serve:ssr:jan-snijder": "node dist/jan-snijder/server/server.mjs"
