--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
     "ng": "ng",
     "start": "ng serve",
     "build": "ng build",
-    "build-github": "ng build --output-path dist --base-href /jan-snijder/",
+    "deploy": "ng deploy --repo=https://github.com/Flabberdapperdan/jan-snijder",
     "watch": "ng build --watch --configuration development",
     "test": "ng test",
     "serve:ssr:jan-snijder": "node dist/jan-snijder/server/server.mjs"
